Fix dropdown menu on mobile screens. Tweak searchbar behavior

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,12 +4,13 @@ body {
 }
 
 .search-form {
- margin: 0.9% 8px 8px 10%; 
- padding: 0px 0px 0px 8px;
+ margin: 0.9% 0px 0.9% 0px; 
+ padding: 0px 0px 0px 0px;
  background: rgba(255,255,255,.13);
 }
 
 .search-input {
+    text-indent: 8px;
     color: white; 
     background: rgba(255,255,255,.00) !important;
     margin-bottom: 0px !important;
